--- a/my_Style_sheet.css
+++ b/my_Style_sheet.css
@@ -11,9 +11,12 @@ header{
 }
 h1{
 background-color: #eee;
-font-size: 28px;
+font-size: 20px;
 padding: 20px;
 text-align: center;
+padding: 20px 0;
+margin: 0;
+margin-bottom: 20px;
 }
 h2{
     font-size: 24px;
@@ -42,5 +45,5 @@ a{
 #bio-image{
     width: 200px;
     height: 200px;
-    margin-right:200px;
+    margin-right:20px;
 }
