--- a/my_Style_sheet.css
+++ b/my_Style_sheet.css
@@ -10,13 +10,15 @@ header{
     background: #333333;
 }
 h1{
-background-color: #eee;
-font-size: 20px;
+background-color: #333333;
+color: azure;
+font-size: 30px;
 padding: 20px;
 text-align: center;
 padding: 20px 0;
 margin: 0;
 margin-bottom: 20px;
+
 }
 h2{
     font-size: 24px;
